# fender

./: Cargo.toml  NOTES.md  README.md  scrape
aeroad/: aeroad_cf_sl_8.0.csv  aeroad_cf_slx_9.0_di2.csv  aeroad_wmn_cf_sl_8.0.csv
endurance/: endurace_al_6.0.csv  endurace_al_7.0.csv  endurace_al_disc_6.0.csv  endurace_al_disc_7.0.csv  endurace_cf_8.0.csv  endurace_cf_sl_disc_7.0.csv  endurace_cf_sl_disc_8.0_di2.csv  endurace_cf_sl_disc_8.0_pro.csv  endurace_cf_slx_disc_9.0_di2.csv  endurace_cf_slx_disc_frameset_mechanical.csv  endurace_wmn_al_disc_7.0.csv  endurace_wmn_cf_sl_disc_8.0.csv  endurace_wmn_cf_sl_disc_8.0_di2.csv
road/: aeroad_cf_sl_7.0.csv  aeroad_cf_sl_disc_8.0_di2.csv  aeroad_cf_sl_disc_8.0_etap.csv  aeroad_cf_slx_disc_9.0_etap.csv  endurace_cf_7.0.csv  endurace_cf_sl_disc_8.0.csv  endurace_cf_sl_disc_8.0_aero_di2.csv  endurace_wmn_al_6.0.csv  endurace_wmn_al_7.0.csv  endurace_wmn_al_disc_6.0.csv  endurace_wmn_cf_sl_disc_7.0.csv  grail_al_6.0.csv  grail_al_7.0_sl.csv  grail_cf_sl_7.0.csv  grail_cf_sl_8.0.csv  grail_cf_slx_8.0_di2.csv  grail_wmn_al_6.0.csv  grail_wmn_cf_sl_7.0.csv  grail_wmn_cf_sl_8.0.csv  inflite_5.csv  inflite_cf_sl_6.csv  inflite_cf_sl_8.csv  inflite_cf_sl_disc_frameset.csv  inflite_cf_slx_9_team.csv  speedmax_cf_8.0.csv  speedmax_cf_8.0_di2.csv  speedmax_cf_slx_8.0.csv  speedmax_cf_slx_8.0_sl.csv  speedmax_cf_slx_9.0_ltd.csv  speedmax_cf_slx_9.0_tt.csv  speedmax_wmn_cf_7.0.csv  speedmax_wmn_cf_8.0.csv  speedmax_wmn_cf_8.0_ltd.csv  speedmax_wmn_cf_slx_8.0_sl.csv  ultimate_cf_evo_disc_frameset_electric.csv  ultimate_cf_sl_7.0.csv  (+15 more)
(+17 files in other folders)
