[package]
name = "fender"
version = "0.1.1-alpha.0"
authors = ["creativcoder"]
edition = "2018"
publish = false

[dependencies]
fantoccini = "0.12"
futures = "0.3.5"
select = "0.4.3"
rand = "0.7.3"
csv = "1.1.3"
fork = "0.1.15"
chrono = "0.4.13"
colored = "1.9.3"
argh = "0.1.3"
ctrlc = "3.1.5"
shellexpand = "2.0.0"
url = "2.1.1"

[dependencies.tokio]
version = "0.2"
features = ["macros"]
